# openspp-test-deployment-manager

./: .env.example  .gitignore  CONTRIBUTING.md  FIXES_TODO.md  NGINX_UPDATE_DEPLOYMENT.md  README.md  app.py  cleanup_all.py  clear_git_cache.py  config.yaml  config.yaml.example  demo.py  fix_existing_ports.py  main.py  manage_git_cache.py  migrate_auth_password.py  pyproject.toml  requirements.txt  run.sh  setup-mac.sh  specs.md  test-imports.py  test_core_functions.py  test_deployment_preparation.py  test_health_check.py  test_integration.py  test_parallel_git.py  test_parallel_stats.py  test_versions.py
.github/workflows/: test.yml
scripts/: setup_nginx_sudo.sh
src/: __init__.py  database.py  deployment_manager.py  docker_handler.py  domain_manager.py  git_cache.py  models.py  nginx_manager.py  performance_tracker.py  utils.py
templates/: env.template
tests/: test_database.py  test_deployment_manager.py  test_models.py  test_performance_tracker.py  test_utils.py
